--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ body, html {
 
 #background {
     background-image: url('https://i.imgur.com/8vAlRXz.png');
-    background-size: cover;
+    background-size: cover; /* Cover the entire page */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat; /* Do not repeat the image */
     position: relative;
     width: 100%;
     height: 100%;
